# geogen

./: CLAUDE.md  README.md  pyproject.toml  run.sh
.claude/: settings.local.json
assets/: bench.yaml  chair.yaml  dining_set.yaml  fire_hydrant.yaml  ground.yaml  house_peaked.yaml  house_simple.yaml  mailbox.yaml  maple_tree.yaml  pine_tree.yaml  road.yaml  road_section.yaml  room.yaml  sidewalk.yaml  street_lamp.yaml  table.yaml  trashcan.yaml
assets/materials/: ceiling_white.yaml  foliage_green.yaml  hardwood_floor.yaml  metal.yaml  red_metal.yaml  wall_plaster.yaml  wood.yaml
assets/scenes/: dining_set.yaml  house_plot.yaml  room_with_furniture.yaml  street.yaml  street_side.yaml  trees.yaml
src/geogen/: __init__.py  main.py
src/geogen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/geogen/core/: __init__.py  geometry.py  mesh.py  node.py  transform.py
src/geogen/generators/: __init__.py  base.py  primitives.py  room.py
src/geogen/layout/: __init__.py  anchors.py  attachments.py  composer.py  loader.py
src/geogen/lighting/: __init__.py
src/geogen/materials/: __init__.py  loader.py  material.py
src/geogen/scenes/: __init__.py  chair.py  dining_set.py  room.py  street.py  table.py
src/geogen/textures/: __init__.py  base.py  floor.py  metal.py  noise.py  wall.py  wood.py
src/geogen/viewer/: __init__.py  qt_viewer.py  viewer.py
src/geogen/viewer/shaders/: __init__.py  blinn_phong.frag  compiler.py  pbr.frag
tests/: test_scenes.py
